# Portfolio-Project

./: .coderabbit.yaml  .editorconfig  .env.example  .gitattributes  .gitignore  .markdownlint.json  .portfolio-agent-note.md  .pre-commit-config.yaml  .sed-tmp  ACTION_ITEMS.md  ACTION_PLAN.md  AI_Instructions.md  AI_PROMPTS.md  AI_PROMPT_DEVELOPMENT_PROGRESS.md  AI_PROMPT_EXECUTION_FRAMEWORK.md  AI_PROMPT_EXECUTION_FRAMEWORK.md.deprecated  AI_PROMPT_LIBRARY.md  AI_PROMPT_LIBRARY.md.deprecated  AI_PROMPT_LIBRARY_MEDIUM_LOW.md  AI_PROMPT_LIBRARY_MEDIUM_LOW.md.deprecated  AI_PROMPT_LIBRARY_RED_TEAM.md  AI_PROMPT_LIST_FOR_GAPS.md  AI_PROMPT_PORTFOLIO_CODE_GENERATION.md  API_DOCUMENTATION.md  ARCHITECTURE.md  AUDIT_COMPLETION_SUMMARY.md  BACKUP_STRATEGY.md  CHANGELOG.md  CHANGES.md  CHANGE_SUMMARY.md  CLOUD_REVIEW_GUIDE.md  CLOUD_SOURCES_INVENTORY.md  CODEOWNERS  CODE_ENHANCEMENTS_SUMMARY.md  CODE_OF_CONDUCT.md  CODE_QUALITY_REPORT.md  CODE_REVIEW_RESPONSE.md  COMPLETION_SUMMARY.md  CONFIGURATION_GUIDE.md  CONTRIBUTING.md  (+132 more)
.cloud-staging/: README.md
docs/: data.md  (+57 more)
portfolio/projects/backend/: .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml  requirements.txt
portfolio/projects/backend/alembic/: env.py
portfolio/projects/backend/alembic/versions/: 20240522_0001_init.py
portfolio/projects/backend/app/: __init__.py  config.py  database.py  dependencies.py  main.py  models.py  schemas.py
portfolio/projects/backend/config/: logging.ini
portfolio/projects/backend/scripts/: load_seed.py
portfolio/projects/backend/tests/: test_health.py  test_projects.py
(+6293 files in other folders)
